ucs-test (5.0.148-24) unstable; urgency=low

  * support modrdn in univention.testing.udm (Bug #38767)

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 25 Jun 2015 16:55:25 +0200

ucs-test (5.0.148-23) unstable; urgency=low

  * Bug #38752: Fix 72_udm-extensions.22_listener_version_change using current
    version

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 25 Jun 2015 11:37:55 +0200

ucs-test (5.0.148-22) unstable; urgency=low

  * added tests/51_samba4/59checkPrimaryGroupInPacInfo (Bug #37101) 

 -- Felix Botner <botner@univention.de>  Wed, 24 Jun 2015 17:22:51 +0200

ucs-test (5.0.148-21) unstable; urgency=medium

  * QA feedback for tests/10_ldap/51listener_case_handling (Bug #35334)

 -- Arvid Requate <requate@univention.de>  Wed, 17 Jun 2015 11:58:41 +0200

ucs-test (5.0.148-20) unstable; urgency=medium

  * Adjust tests/10_ldap/51listener_case_handling (Bug #35334)

 -- Arvid Requate <requate@univention.de>  Wed, 17 Jun 2015 11:38:07 +0200

ucs-test (5.0.148-19) unstable; urgency=medium

  * Add tests/10_ldap/51listener_case_handling (Bug #35334)

 -- Arvid Requate <requate@univention.de>  Tue, 16 Jun 2015 23:29:27 +0200

ucs-test (5.0.148-18) unstable; urgency=low

  * Bug #38663: LDAP required/prohibutedOCs

 -- Philipp Hahn <hahn@univention.de>  Mon, 15 Jun 2015 16:02:47 +0200

ucs-test (5.0.148-17) unstable; urgency=medium

  * Let 402check_mapping_for_single_value_samba4_attributes also check
    post_attributes (Bug #37259)

 -- Arvid Requate <requate@univention.de>  Mon, 15 Jun 2015 13:54:27 +0200

ucs-test (5.0.148-16) unstable; urgency=medium

  * Fix 402check_mapping_for_single_value_samba4_attributes (Bug #37259)

 -- Arvid Requate <requate@univention.de>  Mon, 15 Jun 2015 12:27:26 +0200

ucs-test (5.0.148-15) unstable; urgency=medium

  * 174sync_nested_umlaut_groups: read DN from LDAP to get the exact
    case. It is a known UDM issue (Bug #38704)

 -- Stefan Gohmann <gohmann@univention.de>  Sun, 14 Jun 2015 13:28:47 +0200
